[gd_scene load_steps=8 format=3 uid="uid://dkhyr38n441l4"]

[ext_resource type="Script" path="res://Scripts/player_script.gd" id="1_wtsij"]
[ext_resource type="PackedScene" uid="uid://x1kqij06mhk0" path="res://Objects/Characters/gltf/Mage.glb" id="2_bexf1"]
[ext_resource type="PackedScene" uid="uid://d0wadqeasa1u5" path="res://Objects/Assets/gltf/staff.gltf" id="2_es40h"]
[ext_resource type="PackedScene" uid="uid://cx4uo6nfykia7" path="res://Objects/Ball/ball.glb" id="3_ialpp"]
[ext_resource type="Texture2D" uid="uid://chmtykqidkxt" path="res://Objects/Textures/crosshair.png" id="3_v2o5h"]

[sub_resource type="BoxShape3D" id="BoxShape3D_efps1"]
size = Vector3(1, 0.909912, 1.4501)

[sub_resource type="BoxShape3D" id="BoxShape3D_2obvn"]
size = Vector3(1, 0.770264, 2.13232)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 16
collision_mask = 20
script = ExtResource("1_wtsij")

[node name="MovementGuide" type="Node3D" parent="."]

[node name="Mage" parent="." instance=ExtResource("2_bexf1")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.53677e-09, -0.201386, 0.0290173)

[node name="Skeleton3D" parent="Mage/Rig" index="0"]
bones/4/rotation = Quaternion(-0.514121, -0.485468, -0.485468, 0.514122)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(1.64805e-09, -5.95036e-08, -0.0552855, 0.998471)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(1.20018e-09, 1.33102e-07, -5.4552e-06, 1)
bones/8/rotation = Quaternion(1.60975e-09, 1.60975e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-8.95373e-08, 0.707107, 0.707107, -9.81383e-08)
bones/10/rotation = Quaternion(-8.95373e-08, 0.707107, 0.707107, -9.81383e-08)
bones/11/rotation = Quaternion(-0.514121, 0.485468, 0.485468, 0.514122)
bones/11/scale = Vector3(0.999999, 0.999999, 1)
bones/12/rotation = Quaternion(1.64805e-09, 5.95036e-08, 0.0552855, 0.998471)
bones/13/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/13/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(1.60973e-09, -1.60973e-09, 0.707107, 0.707107)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(1.32707e-07, 1, -4.37114e-08, -2.27651e-09)
bones/17/rotation = Quaternion(1.32707e-07, 1, -4.37114e-08, -2.27651e-09)
bones/19/rotation = Quaternion(-0.130526, -7.04464e-15, -9.27444e-16, 0.991445)
bones/21/rotation = Quaternion(0.999849, -7.13276e-08, -1.20427e-08, 0.0173732)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.106225, 6.86528e-08, -7.37699e-08, 0.994342)
bones/23/rotation = Quaternion(-0.455239, 1.61971e-08, -3.43568e-08, 0.890369)
bones/24/rotation = Quaternion(-3.04791e-08, 0.920355, -0.391084, 6.94849e-08)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.999849, 7.42656e-08, -3.17263e-08, 0.0173732)
bones/25/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(-0.455239, 1.65982e-07, 2.25094e-09, 0.890369)
bones/28/rotation = Quaternion(3.04791e-08, 0.920355, -0.391084, -6.94849e-08)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/30/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/31/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.33983e-34)
bones/32/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.9526e-08)
bones/32/scale = Vector3(1, 1, 1)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(1, -3.10863e-15, 1.94707e-07, -6.91739e-22)
bones/36/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/37/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/38/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.33983e-34)
bones/39/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/40/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/44/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/45/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/46/rotation = Quaternion(-0.5, 0.5, 0.5, 0.5)

[node name="Spellbook" parent="Mage/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999999, -3.80067e-07, -1.35922e-07, 4.78006e-07, 0.999999, -5.30967e-07, 2.14157e-07, 6.23449e-07, 0.999999, 0.883132, 1.04926, 0.265739)

[node name="Spellbook_open" parent="Mage/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.999999, -3.80067e-07, -1.35922e-07, 4.78006e-07, 0.999999, -5.30967e-07, 2.14157e-07, 6.23449e-07, 0.999999, 0.883132, 1.04926, 0.145387)

[node name="Spellbook_open" parent="Mage/Rig/Skeleton3D/Spellbook_open" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, -1.2766e-14, 0, -4.89061e-14, 1, 0, 0, 0)

[node name="1H_Wand" parent="Mage/Rig/Skeleton3D" index="2"]
transform = Transform3D(0.999999, 2.02981e-07, -4.52757e-07, -3.93247e-07, -6.76176e-07, -0.999999, -1.32204e-07, 0.999999, -6.23305e-07, -0.883132, 1.04926, -3.47526e-07)
visible = false

[node name="2H_Staff" parent="Mage/Rig/Skeleton3D" index="3"]
transform = Transform3D(0.999999, 2.02981e-07, -4.52757e-07, -3.93247e-07, -6.76176e-07, -0.999999, -1.32204e-07, 0.999999, -6.23305e-07, -0.883132, 1.04926, -3.47526e-07)
visible = false

[node name="Mage_Hat" parent="Mage/Rig/Skeleton3D" index="4"]
transform = Transform3D(1, -8.47033e-22, 0, 2.11758e-22, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.7841, -1.02333e-07)

[node name="Mage_Cape" parent="Mage/Rig/Skeleton3D" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21587, -1.02333e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2.02488, 0, 0, 0, 4.41126, 0, 0, 0, 2.88288, 0, -0.00592333, -1.09468)
visible = false
shape = SubResource("BoxShape3D_efps1")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38321, 0)

[node name="staff" parent="Head" instance=ExtResource("2_es40h")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.84217e-14, -1.01775, -1.8597)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.132155, -0.795919)
current = true

[node name="Crosshair" type="TextureRect" parent="Head"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_v2o5h")
stretch_mode = 3

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 14

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.319458, -2.05286)
shape = SubResource("BoxShape3D_2obvn")

[node name="LeftHandBall2" parent="." instance=ExtResource("3_ialpp")]
transform = Transform3D(0.08, 0, -2.22045e-16, 0, 0.08, 0, 2.22045e-16, 0, 0.08, -0.895875, 0.863232, -0.269638)
visible = false

[node name="CameraThirtPerson" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.964378, 0.26453, 0, -0.26453, 0.964378, 0, 3.32261, 3.52772)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.25512e-09, 0.596648, -2.8569)
light_color = Color(0.533333, 0.819608, 0.494118, 1)
light_energy = 5.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="Mage"]
